--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -19,7 +19,7 @@
 <body>
    
     <div  class="side-nav">
-        <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+      <a href="../../index.html"> <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
       <ul class="navlinks">
            
             
@@ -28,6 +28,8 @@
             <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
 
             <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i> Gethelp</a></li>
+        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+
             <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
             <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
             <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
