--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/involve.css">
+
+
     <link rel="stylesheet" href="../../assets/css/common.css">
     <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +27,7 @@
   </div> -->
     <nav>
       <div class="side-nav">
-        <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+        <a href="../../index.html">  <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
       <ul class="navlinks">
            
           
@@ -33,6 +35,8 @@
             <li><a id="donationlink"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
             <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
             <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+
             <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
             <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
             <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
