--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -24,7 +24,8 @@
 
 	<nav>
 		<div class="side-nav">
-			<img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+			<a href="../../index.html"> <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
+			
 			<ul class="navlinks">
 
 
@@ -35,6 +36,8 @@
 						<p>About</p>
 					</a></li>
 				<li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+                <li><a href="place.html"><i class="fa-solid fa-truck-medical"></i>Events</a></li>
+
 				<li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
 				<li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
 				<li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
