--- a/pages/donarpages/involve.html
+++ b/pages/donarpages/involve.html
@@ -30,7 +30,7 @@
     <div id="google_translate_element" class="translate"></div>
 
     <div class="side-nav">
-      <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+      <a href="../../index.html"> <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
       <ul class="navlinks">
 
 
@@ -40,6 +40,8 @@
             <p>About</p>
           </a></li>
         <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+        <li><a href="place.html"><i class="fa-solid fa-truck-medical"></i>Events</a></li>
+
         <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
         <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
         <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
@@ -146,7 +148,7 @@
     let beinspired=document.getElementById("beinspiredlink");
    let profile=document.getElementById("myprofile");
 
-    if(arr1==null){
+    if(arr1==null||arr==false){
    
         gethelp.setAttribute("href","../volunteerpages/signup.html");
         donation.setAttribute("href","../volunteerpages/signup.html");
