--- a/pages/volunteerpages/signup.html
+++ b/pages/volunteerpages/signup.html
@@ -33,7 +33,7 @@
             <form id="login" class="input-group">
                 <h1 class="vollogin">volunteer login</h1>
 
-                <input type="text" class="input-field" placeholder="User Id" id="logemail" required />
+                <input type="text" class="input-field" placeholder="User Email" id="logemail" required />
                 <input type="password" class="input-field" placeholder="Enter Password" id="logpassword" required />
                   
                 <button type="submit" class="submit-btn">Log In</button>
