--- a/pages/beinspired/inspire.html
+++ b/pages/beinspired/inspire.html
@@ -26,7 +26,7 @@
 
   <nav>
     <div class="side-nav">
-      <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+      <a href="../../index.html">  <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
       <ul class="navlinks">
 
 
@@ -36,6 +36,8 @@
             About
           </a></li>
         <li><a id="gethelp"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+
         <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
         <li><a id="beinspiredlink"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
         <li><a id="myprofile"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
