--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -26,7 +26,7 @@
     <div id="google_translate_element" class="translate"></div>
 
     <div class="side-nav">
-      <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+      <a href="../../index.html">  <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
       <ul class="navlinks">
 
 
@@ -37,6 +37,9 @@
             <p>About</p>
           </a></li>
         <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+
+
         <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
         <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
         <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
