--- a/pages/patientpages/projectview.html
+++ b/pages/patientpages/projectview.html
@@ -27,13 +27,16 @@
 
   <nav>
     <div class="side-nav">
-      <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
+      <a href="../../index.html">  <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg"></a>
     <ul class="navlinks">
               
           <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>Schemes</a></li>
           <li><a href="../donarpages/donationrequest.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a></li>
           <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i><p>About</p></a></li>
           <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
+          <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+
+
           <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
           <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
           <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
