--- a/pages/volunteerpages/signup.html
+++ b/pages/volunteerpages/signup.html
@@ -257,7 +257,7 @@
                 window.location.href = "../about/profile.html"
             }
             else {
-                swal("sorry!", "password wrong", "error");
+                swal("sorry!", "password wrong or email not exist", "error");
             }
 
 
