--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -8,8 +8,7 @@
 	<script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
-	<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <script src="../../assets/js/translator.js"></script>
+	
 	<script src="../../assets/js/sweetalert.min.js"></script>
 
 </head>
@@ -86,6 +85,8 @@
 		</div>
 	</div>
 </body>
+<input type="text" id="message">
+  <script src="../../assets/js/voicenavigator.js"></script>
 <script>
 	let username=localStorage.getItem("userprofile_name")
 	let users=JSON.parse(localStorage.getItem("user"))
@@ -217,7 +218,7 @@ const url = window.location.search;
 				let arrs = {
 					"time": date_trim,
 					"key1": reqname,
-					"key2": selectedValue,
+					"key2":"donated amount:- "+  selectedValue,
 					"user":user,
 					"img":img
 				}
