--- a/pages/patientpages/bookhospital.html
+++ b/pages/patientpages/bookhospital.html
@@ -14,8 +14,7 @@
   <link rel="stylesheet" href="../../assets/css/book.css">
   <!-- <link rel="stylesheet" href="../../assets/css/donation.css"> -->
   <link rel="stylesheet" href="../../assets/css/common.css">
-  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <script src="../../assets/js/translator.js"></script>
+ 
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
   <title>gethelp</title>
 </head>
@@ -33,25 +32,25 @@
       <ul class="navlinks">
 
 
-        <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>Schemes</a></li>
-        <li><a href="../donarpages/donationrequest.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>Donatenow</a>
+        <li><a href="../about/schemes.html"><i class="fa-solid fa-gift"></i>schemes</a></li>
+        <li><a href="../donarpages/donationrequest.html"><i class="fa-solid fa-circle-dollar-to-slot"></i>donate</a>
         </li>
         <li><a href="../about/aboutus.html"><i class="fa-solid fa-users"></i>
-            <p>About</p>
+            <p>about</p>
           </a></li>
-        <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>Gethelp</a></li>
-        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>Events</a></li>
+        <li><a href="../patientpages/gethelp.html"><i class="fa-solid fa-truck-medical"></i>get help</a></li>
+        <li><a href="../donarpages/place.html"><i class="fa-solid fa-calendar-days"></i>offering</a></li>
 
 
-        <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>GetInvolved</a></li>
-        <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>BeInspired</a></li>
-        <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>Yourprofile</a></li>
+        <li><a href="../donarpages/involve.html"><i class="fa-brands fa-superpowers"></i>get involved</a></li>
+        <li><a href="../beinspired/inspire.html"><i class="fa-solid fa-dragon"></i>be inspired</a></li>
+        <li><a href="../about/profile.html"><i class="fa-solid fa-hospital-user"></i>profile</a></li>
         <div class="active"></div>
       </ul>
     </div>
   </nav>
   <!-- content starts  -->
-  <div id="google_translate_element" class="translate"></div>
+ 
 
   <section class="sec1">
     <div class="sec1h1">
@@ -65,7 +64,7 @@
       <hr>
       <div class="search-container">
         <input type="text" id="search-bar" placeholder="Search product by name...">
-        <button type="button" >Search</button>
+        <!-- <button type="button" >Search</button> -->
       </div>
     </section>
   </div>
@@ -112,6 +111,9 @@
       </div>
     </div>
   </footer>
+  <input type="text" id="message" style="margin-left: 300px;">
+  <script src="../../assets/js/voicenavigator.js"></script>
+  <script src="../../assets/js/autospeech.js"></script>
   <script>
 
 let searchbox=document.getElementById("search-bar")
@@ -228,7 +230,7 @@ let searchbox=document.getElementById("search-bar")
       button.setAttribute("data-id", e.hospital_title)
 
 
-      button.innerText = "book now"
+      button.innerText = e.hospital_title
       a.append(button);
 
 
@@ -237,16 +239,34 @@ let searchbox=document.getElementById("search-bar")
     }
   })
 
-   
-
-
-
-
-
-
-
-
   </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", e => {
+        loader("Hi there now you are in book hospital page select hospital and say the name of the hospital after mic on")
+    })
+  
+    document.addEventListener("dblclick", e => {
+      loader("Hi there now you are in book hospital page  select hospital and say the name of the hospital after mic on")
+    }) 
+     function micon(){
+        let micoff = new SpeechSynthesisUtterance("mic on");
+       speechSynthesis.speak(micoff);
+      }
+  
+      function starter(){
+      converter("a,button")
+      }
+      
+      function inter(n){
+        setInterval(starter,n)
+      }
+    function inter1(e){
+        setInterval(micon,e)
+        inter(e+5000)
+        inter1(e+9000)
+      }
+      inter1(5000)
+    </script>
   <script src="../../assets/js/screenreader.js"></script>
   <script src="../../assets/js/contentreader.js"></script>
   
@@ -304,6 +324,12 @@ let searchbox=document.getElementById("search-bar")
     }
   
   };
+  function starter(){
+    converter("side-nav a,button")
+    }
+        
+    setInterval(starter,15000)
+    clearInterval(starter)
   </script>
   
   
