--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -11,18 +11,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" href="../../assets/images/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
-  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <script src="../../assets/js/translator.js"></script>
+
   <title>gethelp</title>
 </head>
 
 <body>
-  <!-- <div class="checkbox">
-    <label for="click" class="text">screen reader</label>
-    <input type="checkbox" id="click" >
-
-  </div> -->
-  <!-- nav bar starts  -->
   <div id="google_translate_element" class="translate"></div>
 
   <nav>
@@ -62,7 +55,7 @@
             <p>hey my lovely brothers and sister<br>Here we give you more medical offers from our trust.<br>
               Click the below button to book<br> free medical offers</p>
 
-            <a href="../patientpages/bookhospital.html"> <button class="join">VIEW OFFERS</button></a>
+            <a href="../patientpages/bookhospital.html"> <button class="join">hospital</button></a>
 
           </div>
           <div class="products">
@@ -70,7 +63,7 @@
             <p>hey my lovely brothers and sisters<br>here we give you more products at low cost ffroom our
               trust<br>
               Click the below button to buy products<br> which can help you more</p>
-            <a href="../patientpages/buyproducts.html"><button class="join">VIEW PRODUCTS</button></a>
+            <a href="../patientpages/buyproducts.html"><button class="join">products</button></a>
           </div>
           <div class="schemes">
             <h1>Govt Schemes</h1>
@@ -78,7 +71,7 @@
               for diffrently abled peoples
               <br> Click the below buton to view more
             </p>
-            <a href="../patientpages/govt.html"><button class="join">VIEW SCHEMES</button></a>
+            <a href="../patientpages/govt.html"><button class="join">schemes</button></a>
           </div>
         </div>
       </div>
@@ -224,6 +217,9 @@
     </div>
   </footer>
 </body>
+<input type="text" id="message" style="margin-left: 300px;">
+<script src="../../assets/js/voicenavigator.js"></script>
+<script src="../../assets/js/autospeech.js"></script>
 <script src="../../assets/js/screenreader.js"></script>
 <script src="../../assets/js/contentreader.js"></script>
 
@@ -283,7 +279,33 @@
   };
 
 </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", e => {
+        loader("Hi there now you are in get help page you can select buy products by saying product and hospital booking by saying hospital")
+    })
 
+    document.addEventListener("dblclick", e => {
+      loader("Hi there now you are in get help page you can select buy products by saying product and hospital booking by saying hospital")
+    }) 
+    function micon(){
+        let micoff = new SpeechSynthesisUtterance("mic on");
+      speechSynthesis.speak(micoff);
+      }
+
+      function starter(){
+      converter("a,button")
+      }
+      
+      function inter(n){
+        setInterval(starter,n)
+      }
+    function inter1(e){
+        setInterval(micon,e)
+        inter(e+5000)
+        inter1(e+9000)
+      }
+      inter1(5000)
+    </script>
 
 <script>
     document.addEventListener('keydown', function(event) {
