--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -108,8 +108,9 @@
       </div>
     </div>
   </footer>
-  <input type="text" id="message">
+  <input type="text" id="message" style="margin-left: 300px;">
   <script src="../../assets/js/voicenavigator.js"></script>
+  <script src="../../assets/js/autospeech.js"></script>
  
 
   <script>
@@ -230,7 +231,7 @@
   </script>
   <script src="../../assets/js/screenreader.js"></script>
   <script src="../../assets/js/contentreader.js"></script>
-   <script src="../../assets/js/autospeech.js"></script>
+   <!-- <script src="../../assets/js/autospeech.js"></script> -->
 
   <script>
     let cnt = -1;
