--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -63,7 +63,7 @@
             <p>hey my lovely brothers and sisters<br>here we give you more products at low cost ffroom our
               trust<br>
               Click the below button to buy products<br> which can help you more</p>
-            <a href="../patientpages/buyproducts.html"><button class="join">products</button></a>
+            <a href="../donarpages/place.html"><button class="join">products</button></a>
           </div>
           <div class="schemes">
             <h1>Govt Schemes</h1>
@@ -287,24 +287,6 @@
     document.addEventListener("dblclick", e => {
       loader("Hi there now you are in get help page you can select buy products by saying product and hospital booking by saying hospital")
     }) 
-    function micon(){
-        let micoff = new SpeechSynthesisUtterance("mic on");
-      speechSynthesis.speak(micoff);
-      }
-
-      function starter(){
-      converter("a,button")
-      }
-      
-      function inter(n){
-        setInterval(starter,n)
-      }
-    function inter1(e){
-        setInterval(micon,e)
-        inter(e+5000)
-        inter1(e+9000)
-      }
-      inter1(5000)
     </script>
 
 <script>
