--- a/pages/volunteerpages/volunteerwork.html
+++ b/pages/volunteerpages/volunteerwork.html
@@ -70,6 +70,8 @@
             <td>Royapuram</td>
             <td>Sensus about differently abled peoples</td>
             <td>7-9am</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
 
@@ -77,6 +79,8 @@
             <td>Plavakam</td>
             <td>Sensus about differently abled peoples</td>
             <td>9-11am</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
 
@@ -85,6 +89,8 @@
             <td>Sensus about differently abled peoples</td>
 
             <td>12-2pm</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
             <td>4</td>
@@ -92,6 +98,8 @@
             <td>Sensus about differently abled peoples</td>
 
             <td>2-4pm</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
 
@@ -100,6 +108,8 @@
             <td>Sensus about differently abled peoples</td>
 
             <td>4-6pm</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
 
@@ -107,6 +117,8 @@
             <td>cross road</td>
             <td>Sensus about differently abled peoples</td>
             <td>6-8pm</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
           <tr>
 
@@ -114,6 +126,8 @@
             <td>washerment</td>
             <td>Sensus about differently abled peoples</td>
             <td>8-9pm</td>
+            <!-- <td><button class="join">avilable</button></td> -->
+
           </tr>
         </table>
         <button type="submit" id="join">Data Entry</button>
