--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
     document.addEventListener("dblclick", e => {
-      loader("Hi there welcome to freshtrust .Now you are in index page, click right arrow button to navigate to the Event page. and press Enter to go into the event. or say offering after mic on")
+      loader("Hi there welcome to freshtrust .Now you are in index page, click right arrow button to navigate to the Offering page. and press Enter to go into the event. or say offering after mic on")
     })
 
   </script>
